# typhoon

./: .env.example  .gitignore  AGENTS.md  README.md  analyze.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: mcp.json
.cursor/skills/mysql-mcp/: SKILL.md
.cursor/skills/mysql-weather-db/: SKILL.md
.cursor/skills/mysql-weather-db/scripts/: query.py
.github/workflows/: pages.yml
config/: stations.yaml
data/: weather_stations_bavi.csv
data/raw/: sample_stations.csv
docs/: index.html  standalone.html
docs/css/: styles.css
docs/js/: app.js
scripts/: generate_sample_data.py  ingest_and_analyze.py
site/data/: analysis.json
site/js/: app.js
src/typhoon/: __init__.py  analysis.py  cli.py  config.py  io.py  process.py  viz.py
tests/: test_analyze.py  test_core.py
